@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-10T16:20:19Z",
+  "timestamp" : "2024-01-11T08:19:40Z",
   "count_outdated" : 1143,
   "uniques_outdated" : 724,
-  "count" : 1155,
-  "uniques" : 731,
+  "count" : 1156,
+  "uniques" : 732,
   "clones" : [
     {
       "timestamp": "2023-12-29T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-01-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
