@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 4,
   "clones": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2024-01-10T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-01-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
